samples/_failures_safe/1761433837_4207e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_218b97f4.c: In function ‘main’:
./samples/SAFE/__tmp_218b97f4.c:173:5: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  173 |     token
      |     ^~~~~
      |     Token
./samples/SAFE/__tmp_218b97f4.c:173:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_218b97f4.c:173:10: error: expected ‘;’ at end of input
  173 |     token
      |          ^
      |          ;
./samples/SAFE/__tmp_218b97f4.c:173:5: error: expected declaration or statement at end of input
  173 |     token
      |     ^~~~~
